src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

:root {
	--black: 15, 18, 25;
	--gray-light: 229, 233, 240;
	--gray-dark: 34, 41, 57;
	--gray-gradient: rgba(var(--gray-light), 50%), #fff;


	--yellow-light-theme: #604c09;
	--pink-light-theme: #41082c;
	--blue-light-theme: #0b353f;
	--green-light-theme: #14533B;
	--text-color-light-theme: #101010;
	--title-color-light-theme: var(--yellow-light-theme);
	--link-color-light-theme: var(--blue-light-theme);
	--background-light-theme: #f2f8ff;
	--header-light-theme: #ffffff;
	--gray-light-theme: rgb(34, 41, 57);

	--yellow-dark-theme: #f5c300;
	--pink-dark-theme: #a4036f;
	--blue-dark-theme: #048ba8;
	--green-dark-theme: #16DB93;
	--text-color-dark-theme: #fff7d8;
	--title-color-dark-theme: var(--yellow-dark-theme);
	--link-color-dark-theme: var(--blue-dark-theme);
	--background-dark-theme: #202020;
	--header-dark-theme: #151515;
	--gray-dark-theme: rgb(229, 233, 240);
	
	--yellow : var(--yellow-light-theme);
	--pink : var(--pink-light-theme);
	--blue : var(--blue-light-theme);
	--green : var(--green-light-theme);
	--text-color: var(--text-color-light-theme);
	--title-color: var(--title-color-light-theme);
	--link-color: var(--link-color-light-theme);
	--background-colour : var(--background-light-theme);
	--header-color: var(--header-light-theme);
	
	--accent: var(--green);
	--accent-dark: var(--blue);
	--gray: var(--gray-light-theme);


	--box-shadow: 0 2px 6px rgba(var(--black), 25%), 0 8px 24px rgba(var(--black), 33%),
		0 16px 32px rgba(var(--black), 33%);

	--box-shadow-lighter: 0 2px 6px rgba(var(--black), 50%), 0 8px 24px rgba(var(--black), 20%);
}


@media (prefers-color-scheme: light) {
	/* defaults to dark theme */
	:root {
		--yellow : var(--yellow-dark-theme);
		--pink : var(--pink-dark-theme);
		--blue : var(--blue-dark-theme);
		--green : var(--green-dark-theme);
		--text-color: var(--text-color-dark-theme);
		--title-color: var(--title-color-dark-theme);
		--link-color: var(--link-color-dark-theme);
		--background-colour : var(--background-dark-theme);
		--header-color: var(--header-dark-theme);
		--gray: var(--gray-dark-theme);
	}
		
}

@font-face {
	font-family: 'Atkinson';
	src: url('/fonts/atkinson-regular.woff') format('woff');
	font-weight: 400;
	font-style: normal;
	font-display: swap;
}
@font-face {
	font-family: 'Atkinson';
	src: url('/fonts/atkinson-bold.woff') format('woff');
	font-weight: 700;
	font-style: normal;
	font-display: swap;
}
body {
	font-family: 'Atkinson', sans-serif;
	margin: 0;
	padding: 0;
	text-align: left;
	background: var(--background-colour);
	background-size: 100% 600px;
	word-wrap: break-word;
	overflow-wrap: break-word;
	color: var(--text-color);
	font-size: 20px;
	line-height: 1.7;
}
main {
	width: 720px;
	max-width: calc(100% - 2em);
	margin: auto;
	padding: 3em 1em;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0 0 0.5rem 0;
	color: var(--accent);
	line-height: 1.2;
}

h1 {
	font-size: 3.052em;
	color: hsl(from var(--accent) h s l);
}
h2 {
	font-size: 2.441em;
	color: hsl(from var(--accent) h s calc(l * 0.9));
}
h3 {
	font-size: 1.953em;
	color: hsl(from var(--accent) h s calc(l * 0.8));
}
h4 {
	font-size: 1.563em;
	color: hsl(from var(--accent) h s calc(l * 0.7));
}
h5 {
	font-size: 1.25em;
	color: hsl(from var(--accent) h s calc(l * 0.6));
}
h6 {
	font-size: 1.00em;
	color: hsl(from var(--accent) h s calc(l * 0.5));
}


.prose ol li:nth-child(even)::marker,
.prose ul li:nth-child(even)::marker {
	color: var(--blue);
}

.prose ol li:nth-child(odd)::marker,
.prose ul li:nth-child(odd)::marker {
	color: var(--green);
}

.prose ol li:nth-child(5n)::marker,
.prose ul li:nth-child(5n)::marker {
	color: var(--yellow);
}

strong,
b {
	font-weight: 700;
}
a {
	color: var(--link-color);
}
a:hover {
	color: var(--accent-dark);
}
p {
	margin-bottom: 1em;
}
.prose p {
	margin-bottom: 2em;
}


/* the articles drop shadows */
.prose img {
	box-shadow: var(--box-shadow);
}
.astro-code {
	box-shadow: var(--box-shadow);
}

textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
	border-radius: 8px;
}
code {
	padding: 2px 5px;
	color: rgb(var(--gray-light));
	background-color: rgb(var(--gray-dark));
	border-radius: 4px;
}
pre {
	padding: 1.5em;
	border-radius: 8px;
}
pre > code {
	all: unset;
}
blockquote {
	border-left: 4px solid var(--accent);
	padding: 0 0 0 20px;
	margin: 0px;
	font-size: 1.333em;
}
hr {
	border: none;
	border-top: 1px solid var(--gray);
}
@media (max-width: 720px) {
	body {
		font-size: 18px;
	}
	main {
		padding: 1em;
	}
}



.sr-only {
	border: 0;
	padding: 0;
	margin: 0;
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
	clip: rect(1px 1px 1px 1px);
	/* maybe deprecated but we need to support legacy browsers */
	clip: rect(1px, 1px, 1px, 1px);
	/* modern browsers, clip-path works inwards from each corner */
	clip-path: inset(50%);
	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
	white-space: nowrap;
}

